[waybar] correct some icons & their spacing

--- a/user/waybar/style.css
+++ b/user/waybar/style.css
@@ -123,6 +123,7 @@ button {
 
 #power-profiles-daemon {
     background-color:  @green;
+    padding-right: 12px;
 }
 
 #cpu {
